force-app/main/default/objects/LLC_BI__Branch__c/LLC_BI__Branch__c.object-meta.xml
<CustomObject>
    <description>The Branch Object contains information about specific branch locations of a financial institution .</description>
    <label>Branch</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>