force-app/main/default/objects/LLC_BI__Branch__c/fields/cm_Default_Online_Branch__c.field-meta.xml
<CustomField>
    <fullName>cm_Default_Online_Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this as true for the branch that should be used as the default option for online applications.  ENSURE THAT ONLY ONE BRANCH RECORD HAS THIS FLAG SET TO TRUE.z</description>
    <label>Default Online Branch</label>
    <type>Checkbox</type>
</CustomField>