force-app/main/default/objects/LLC_BI__Branch__c/fields/LLC_BI__Branch_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Branch_Id__c</fullName>
    <description>This field is optional. The user manually populates this field. It represents the branch ID of the institution.</description>
    <label>Branch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>