force-app/main/default/objects/LLC_BI__Branch__c/fields/LLC_BI__County__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__County__c</fullName>
    <description>Users manually populate this optional field. It specifies which county the branch is located in.</description>
    <label>County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>