force-app/main/default/objects/LLC_BI__Branch__c/fields/LLC_BI__Location__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Location__c</fullName>
    <description>This field is optional and is manually populated. It specifies the latitude and longitude of the branch location. Currently supported to 6 decimals.</description>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>