force-app/main/default/objects/LLC_BI__Branch__c/fields/LLC_BI__NMLS__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__NMLS__c</fullName>
    <description>Administrators populate this mandatory field to capture a financial institution&apos;s unique National Mortgage Licensing System (NMLS) branch number. By default, it is blank.</description>
    <inlineHelpText>Enter the unique National Mortgage Licensing System (NMLS) number for the financial institution&apos;s branch.</inlineHelpText>
    <label>NMLS</label>
    <length>30</length>
    <type>Text</type>
</CustomField>