force-app/main/default/objects/LLC_BI__Branch__c/fields/LLC_BI__Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Zip_Code__c</fullName>
    <description>This field is optional and is manually populated. It specifies the zip code that the branch is located in.</description>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>