force-app/main/default/objects/LLC_BI__Branch__c/fields/Region_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Region_Name_Formula__c</fullName>
    <formula>Region__r.Name</formula>
    <label>Region Name</label>
    <type>Text</type>
</CustomField>