force-app/main/default/objects/LLC_BI__Branch__c/listViews/All_Branches.listView-meta.xml
<ListView>
    <fullName>All_Branches</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Branch_Id__c</columns>
    <columns>Region__c</columns>
    <columns>LLC_BI__lookupKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Branches</label>
</ListView>